adding tap functionality to show customization options

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -123,6 +123,7 @@
      <Compile Include="Assets\Vuforia\Scripts\WordBehaviour.cs" />
      <Compile Include="Assets\clickHandler.cs" />
      <Compile Include="Assets\colorChanger.cs" />
+     <Compile Include="Assets\tapController.cs" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\LeanTouch\Examples\Fonts\OFL.txt" />
      <None Include="Assets\Vuforia\Shaders\ColoredLines.shader" />
