--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -124,15 +124,16 @@
      <Compile Include="Assets\clickHandler.cs" />
      <Compile Include="Assets\colorChanger.cs" />
      <Compile Include="Assets\tapController.cs" />
+     <Compile Include="Assets\trackableList.cs" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\LeanTouch\Examples\Fonts\OFL.txt" />
      <None Include="Assets\Vuforia\Shaders\ColoredLines.shader" />
-     <None Include="Assets\StreamingAssets\QCAR\Image_Targets.xml" />
      <None Include="Assets\link.xml" />
      <None Include="Assets\Vuforia\Shaders\VertexLitWithZ.shader" />
      <None Include="Assets\Vuforia\Shaders\RenderVideoBackground.shader" />
      <None Include="Assets\readme_SDK.txt" />
      <None Include="Assets\LeanTouch\Examples\Shaders\BackgroundSkybox.shader" />
+     <None Include="Assets\StreamingAssets\QCAR\Image_Targets.xml" />
      <None Include="Assets\LeanTouch\Examples\Shaders\Smooth.shader" />
      <None Include="Assets\Vuforia\Shaders\VideoBackground.shader" />
      <None Include="Assets\license_3rdpartynotice.txt" />
